--- a/roles/nginx/tasks/04_config.yml
+++ b/roles/nginx/tasks/04_config.yml
@@ -12,6 +12,13 @@
     owner={{ nginx_user }} group={{ nginx_group }} mode=0755 force=yes
   when: (ansible_service_mgr == "upstart" or ansible_service_mgr == "sysvinit")
 
+- name: "Create the configuration directory"
+  file: >
+    path={{ nginx_conf_dir }} state=directory
+    owner={{ nginx_user }} group={{ nginx_group }} mode=0755
+    recurse=yes
+    force=yes
+
 - name: "Generate global nginx config file"
   template: >
     src=nginx.conf.j2 dest={{ nginx_conf_dir }}/nginx.conf
@@ -22,14 +29,6 @@
     src="{{ item }}.conf.j2"
     dest="{{ nginx_conf_dir }}/sites-available/{{ item }}.conf"
     owner={{ nginx_user }} group={{ nginx_group }} mode=0644 force=yes
-  with_items:
-    - "default"
-
-- name: "Create links for sites-enabled"
-  file:
-    state: link
-    src: "{{ nginx_conf_dir }}/sites-available/{{ item }}.conf"
-    dest: "{{ nginx_conf_dir }}/sites-enabled/{{ item }}.conf"
   with_items:
     - "default"
 
