[chore][deploy] Add DINGODB_ENABLE_ROCKSDB_SYNC for dingo lite.

--- a/container/docker-compose/docker-compose.lite.yml
+++ b/container/docker-compose/docker-compose.lite.yml
@@ -11,6 +11,7 @@ x-shared-environment: &shared-env
   DINGODB_ENABLE_LITE: 1
   DEFAULT_MIN_SYSTEM_DISK_CAPACITY_FREE_RATIO: 0.05
   DEFAULT_MIN_SYSTEM_MEMORY_CAPACITY_FREE_RATIO: 0.20
+  DINGODB_ENABLE_ROCKSDB_SYNC: 1
 
 services:
   coordinator1:
