--- a/roles/nginx/tasks/04_config.yml
+++ b/roles/nginx/tasks/04_config.yml
@@ -19,15 +19,22 @@
     recurse=yes
     force=yes
 
+- name: "Create the configuration conf.d directory"
+  file: >
+    path={{ nginx_conf_dir }}/conf.d state=directory
+    owner={{ nginx_user }} group={{ nginx_group }} mode=0755
+    recurse=yes
+    force=yes
+
 - name: "Generate global nginx config file"
   template: >
     src=nginx.conf.j2 dest={{ nginx_conf_dir }}/nginx.conf
     owner={{ nginx_user }} group={{ nginx_group }} mode=0644 force=yes
 
-- name: "Create the configurations for sites"
+- name: "Create the configurations for conf.d"
   template: >
     src="{{ item }}.conf.j2"
-    dest="{{ nginx_conf_dir }}/sites-available/{{ item }}.conf"
+    dest="{{ nginx_conf_dir }}/conf.d/{{ item }}.conf"
     owner={{ nginx_user }} group={{ nginx_group }} mode=0644 force=yes
   with_items:
     - "default"
