--- a/roles/dingo_store/defaults/main.yml
+++ b/roles/dingo_store/defaults/main.yml
@@ -26,9 +26,11 @@ is_dingo_store_coordinator: "{{ 'coordinator' in group_names }}"
 is_dingo_store_store: "{{ 'store' in group_names }}"
 is_dingo_store_document: "{{ 'document' in group_names }}"
 is_dingo_store_index: "{{ 'index' in group_names }}"
+is_dingo_store_diskann: "{{ 'diskann' in group_names }}"
 
 store_num: "{{ hostvars[inventory_hostname]['store_num'] | default(1) }}"
 document_num: "{{ hostvars[inventory_hostname]['document_num'] | default(1) }}"
 index_num: "{{ hostvars[inventory_hostname]['index_num'] | default(1) }}"
+diskann_num: "{{ hostvars[inventory_hostname]['diskann_num'] | default(1) }}"
 default_disk_join: "{{ (dingo_store_home | string ~ '/dist ') * (store_num | int) }}"
 default_disk_list: "{{ default_disk_join | trim}}"
