--- a/roles/dingo_store/tasks/03_start_roles_command.yml
+++ b/roles/dingo_store/tasks/03_start_roles_command.yml
@@ -32,6 +32,14 @@
   args:
     chdir: "{{ dingo_store_home }}"
 
+# stop all the diskann
+- name: "Stop and Del db diskann on all host"
+  become: true
+  become_user: "{{ dingo_user }}"
+  shell: "/bin/bash ./scripts/start-diskann.sh clean"
+  args:
+    chdir: "{{ dingo_store_home }}"
+
 # start coordinator
 - name: "Deploy and Start Coordinator using Script"
   become: true
@@ -74,6 +82,17 @@
 - name: "Sleep wait store start"
   shell: "sleep 20"
 
+# start diskann
+- name: "Deploy and Start diskann using Shell Script"
+  become: true
+  become_user: "{{ dingo_user }}"
+  shell: "/bin/bash ./scripts/start-diskann.sh cleanstart"
+  args:
+    chdir: "{{ dingo_store_home }}"
+  when: is_dingo_store_diskann
+
+- name: "Sleep wait store start"
+  shell: "sleep 20"
 
 - name: "install license"
   register: license_id
