--- a/container/docker-compose/docker-compose.yml
+++ b/container/docker-compose/docker-compose.yml
@@ -190,6 +190,22 @@ services:
       INDEX_INSTANCE_START_ID: 1103
       <<: *shared-env
 
+  diskann1:
+    image: dingodatabase/dingo-store:latest
+    hostname: diskann1
+    container_name: diskann1
+    network_mode: host
+    depends_on:
+      - coordinator1
+      - coordinator2
+      - coordinator3
+    environment:
+      FLAGS_role: diskann
+      DISKANN_SERVER_START_PORT: 24001
+      DISKANN_INSTANCE_START_ID: 1301
+      DEFAULT_REPLICA_NUM: 1
+      <<: *shared-env
+
   executor:
     image: dingodatabase/dingo:latest
     hostname: executor
