[chore][deploy] Fix diskann host ip for index

--- a/container/docker-compose/docker-compose.yml
+++ b/container/docker-compose/docker-compose.yml
@@ -6,6 +6,7 @@ x-shared-environment: &shared-env
   SERVER_HOST: ${DINGO_HOST_IP}
   RAFT_LISTEN_HOST: 0.0.0.0
   RAFT_HOST: ${DINGO_HOST_IP}
+  DISKANN_SERVER_HOST: ${DINGO_HOST_IP}
   COOR_RAFT_PEERS: ${DINGO_HOST_IP}:22101,${DINGO_HOST_IP}:22102,${DINGO_HOST_IP}:22103
   COOR_SRV_PEERS: ${DINGO_HOST_IP}:22001,${DINGO_HOST_IP}:22002,${DINGO_HOST_IP}:22003
   DEFAULT_REPLICA_NUM: 3
