--- a/container/docker-compose/docker-compose.single.yml
+++ b/container/docker-compose/docker-compose.single.yml
@@ -6,6 +6,7 @@ x-shared-environment: &shared-env
   SERVER_HOST: ${DINGO_HOST_IP}
   RAFT_LISTEN_HOST: 0.0.0.0
   RAFT_HOST: ${DINGO_HOST_IP}
+  DISKANN_SERVER_HOST: ${DINGO_HOST_IP}
   COOR_RAFT_PEERS: ${DINGO_HOST_IP}:22101
   COOR_SRV_PEERS: ${DINGO_HOST_IP}:22001
   DEFAULT_REPLICA_NUM: 1
