--- a/container/docker-compose/docker-compose.single.yml
+++ b/container/docker-compose/docker-compose.single.yml
@@ -75,6 +75,7 @@ services:
       - 3307:3307
     networks:
       - dingo_net
+    restart: on-failure:5
     environment:
       DINGO_ROLE: executor
       DINGO_HOSTNAME: executor
