[chore][deploy] Add max_map_count and cancel ntp install

--- a/roles/system/tasks/04_install_ntp_or_chrony.yml
+++ b/roles/system/tasks/04_install_ntp_or_chrony.yml
@@ -6,7 +6,8 @@
 
 - set_fact:
     chrony_installed: "{{ 'chrony' in ansible_facts.packages }}"
-    ntp_installed: "{{ 'ntp' in ansible_facts.packages }}"
+    # ntp_installed: "{{ 'ntp' in ansible_facts.packages }}"
+    ntp_installed: false
 
 - debug: var=chrony_installed
 - debug: var=ntp_installed
