--- a/group_vars/all/_shared.yml
+++ b/group_vars/all/_shared.yml
@@ -30,6 +30,7 @@ core_file_dir: /home/corefiles
 ulimit_nproc_limit: 4194304
 ulimit_nofile_limit: 1048576
 fs_aio_max_nr: 1048576
+max_map_count: 655360
 install_optimize_memory: true
 install_no_passwd_login: true
 #-----------------------------------------------------
